--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
         <div class="welcome__text">
           <h4 class="welcome__subtitle">FAST FOOD BURGERS</h4>
           <h1 class="welcome__title">The fastest food, for instant hunger.</h1>
-          <p class="welcome__desc">Some food has looked so awful that it's looked like something that the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words & my food and gone back for seconds.</p>
+          <p class="welcome__desc">Some food has looked so awful that it's looked like something that the dog's brought home, yet after one mouthful I've been left eating my thoughts, my words  my food and gone back for seconds.</p>
           <a href="#!" class="btn">Order now</a>
         </div>
       </div>
